--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,12 +21,15 @@ dependencies:
     #   ref: master
   simple_localization: ^1.0.0
   
-  firebase_core: ^1.0.0
-  firebase_auth: ^1.0.0
-  firebase_storage: ^8.0.0
-  firebase_messaging: ^9.0.0
+  firebase_core: ^0.7.0
+  firebase_auth: ^0.20.1
+  firebase_storage: ^7.0.0
+  firebase_messaging: ^8.0.0-dev.15
   
-  localstorage: ^3.0.2+5
+  localstorage: ^3.0.1+4
+
+dependency_overrides:
+  intl: ^0.17.0-nullsafety.2
 
 dev_dependencies:
   flutter_test:
