--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,10 @@
 name: useful_firebase
 description: Package to simplify application creation with a standard structure
 version: 1.0.0
-author: Ricardo Crescenti <ricardo.crescenti@gmail.com>
 homepage: https://github.com/ricardocrescenti/flutter-simple-app
 
 environment:
-  sdk: ">=2.2.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -14,27 +13,20 @@ dependencies:
     sdk: flutter
   flutter_cupertino_localizations: ^1.0.1
 
-  standard_dialogs: ^1.2.0
-    # path: '..\flutter-standard-dialogs'
-    # git: 
-    #   url: https://github.com/ricardocrescenti/flutter-standard-dialogs.git
-    #   ref: master
-  simple_localization: ^1.0.0
+  standard_dialogs: ^2.0.0
+  simple_localization: ^2.0.0
   
-  firebase_core: ^0.7.0
-  firebase_auth: ^0.20.1
-  firebase_storage: ^7.0.0
-  firebase_messaging: ^8.0.0-dev.15
+  firebase_core: ^1.19.1
+  firebase_auth: ^3.4.1
+  firebase_storage: ^10.3.1
+  firebase_messaging: ^11.4.4
   
-  localstorage: ^3.0.1+4
-
-dependency_overrides:
-  intl: ^0.17.0-nullsafety.2
+  localstorage: ^4.0.0+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  pedantic: ^1.8.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
